kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  labels:
    app: app-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
      - name: app-demo
        image: ghcr.io/rrrrho/ci-cd-pipeline-demo:sha-9b5bc14061c881f1028beeda6cc205cfee7c4bb8
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
